--- a/web.html
+++ b/web.html
@@ -1,7 +1,7 @@
 <html>
     <div>
         <h1>Names</h1>
-        <h2>Luxmi</h2>
+        <h2>Ankit</h2>
         <h2>Yubraj</h2>
         <h2>Glug</h2>
     </div>
